fixed contact form styling on ios

--- a/src/components/PageSections/HomeContact/HomeContactForm/HomeContactForm.scss
+++ b/src/components/PageSections/HomeContact/HomeContactForm/HomeContactForm.scss
@@ -60,6 +60,8 @@
     font-weight: 300;
     font-size: 2rem;
     padding-bottom: 1rem;
+    -webkit-appearance: none;
+    border-radius: 0;
 
     &:focus {
       outline: none;
@@ -81,7 +83,10 @@
     color: $color-white;
     font-size: 2rem;
     font-weight: 300;
+    -webkit-appearance: none;
+    border-radius: 0;
     transition: all 0.42s cubic-bezier(0.165, 0.84, 0.44, 1);
+
     @media screen and(min-width: 850px) {
       height: 3.2rem;
     }
